Update scaling algorithm